--- a/frontend/src/3_Pages/2_Coach/2_2_Clients/styles.css
+++ b/frontend/src/3_Pages/2_Coach/2_2_Clients/styles.css
@@ -3,7 +3,7 @@
   display: -ms-flexbox; /* Not needed if autoprefixing */
   display: flex;
   justify-content: center;
-  margin: 40px 0; /* gutter size offset */
+  margin: 40px 0px; /* gutter size offset */
   width: 90%;
 }
 .my-masonry-grid_column {
